--- a/demo/app/src/main/res/layout/activity_forgot_password.xml
+++ b/demo/app/src/main/res/layout/activity_forgot_password.xml
@@ -18,7 +18,7 @@
             android:orientation="vertical"
             android:paddingTop="60dp">
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_layout_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -29,7 +29,7 @@
                     android:layout_height="wrap_content"
                     android:hint="Email/Phone"
                     android:inputType="textEmailAddress"/>
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
 
             <Button
