--- a/demo/app/src/main/res/layout/activity_login.xml
+++ b/demo/app/src/main/res/layout/activity_login.xml
@@ -79,7 +79,7 @@
                 android:orientation="vertical">
 
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_layout_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -91,10 +91,10 @@
                         android:layout_height="wrap_content"
                         android:hint="Email/Phone/Username"
                         android:inputType="textEmailAddress"/>
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_layout_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -105,7 +105,7 @@
                         android:layout_height="wrap_content"
                         android:hint="Password"
                         android:inputType="textPassword"/>
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
 
                 <Button
