--- a/demo/app/src/main/res/layout/activity_otp.xml
+++ b/demo/app/src/main/res/layout/activity_otp.xml
@@ -10,7 +10,7 @@
         android:padding="16dp"
         android:gravity="center">
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_otp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -23,7 +23,7 @@
                 android:hint="Enter OTP"
                 android:id="@+id/otp"/>
 
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btn_submit"
