--- a/demo/app/src/main/res/layout/activity_register.xml
+++ b/demo/app/src/main/res/layout/activity_register.xml
@@ -19,7 +19,7 @@
                 android:layout_marginTop="20dp"
                 android:orientation="vertical">
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_layout_firstname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -32,9 +32,9 @@
                         android:textSize="15dp"
                         android:hint="FirstName"
                         android:id="@+id/firstname"/>
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_layout_lastname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -47,10 +47,10 @@
                         android:textSize="15dp"
                         android:hint="LastName"
                         android:id="@+id/lastname"/>
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_layout_country"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -63,9 +63,9 @@
                         android:textSize="15dp"
                         android:hint="Country"
                         android:id="@+id/country"/>
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_layout_countrycode"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -78,10 +78,10 @@
                         android:textSize="15dp"
                         android:hint="Country Code"
                         android:id="@+id/countrycode"/>
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_layout_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -95,10 +95,10 @@
                         android:inputType="textEmailAddress"
                         android:hint="Email/Phone/Username"
                         android:id="@+id/email"/>
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_layout_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -113,10 +113,10 @@
                         android:hint="Password"
                         android:id="@+id/password"/>
 
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_layout_confpassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -131,7 +131,7 @@
                         android:hint="Confirm Password"
                         android:id="@+id/confpassword"/>
 
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
 
