--- a/demo/app/src/main/res/layout/activity_reset_password_by_otp.xml
+++ b/demo/app/src/main/res/layout/activity_reset_password_by_otp.xml
@@ -11,7 +11,7 @@
         android:padding="16dp"
         android:gravity="center">
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -26,9 +26,9 @@
                 android:hint="New Password"
                 android:id="@+id/new_password"/>
 
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_confpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -43,7 +43,7 @@
                 android:hint="Confirm Password"
                 android:id="@+id/confpassword"/>
 
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btn_submit"
