--- a/demo/app/src/main/res/layout/activity_security_questions.xml
+++ b/demo/app/src/main/res/layout/activity_security_questions.xml
@@ -23,7 +23,7 @@
             android:textColor="@android:color/black"/>
 
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_password"
             android:layout_width="match_parent"
             android:layout_marginLeft="10dp"
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Password"
                 android:inputType="textPassword"/>
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <ListView
             android:id="@+id/lvQuestions"
