--- a/demo/app/src/main/res/layout/activity_main.xml
+++ b/demo/app/src/main/res/layout/activity_main.xml
@@ -52,5 +52,26 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp" />
 
+    <TextView
+        android:id="@+id/or_tv"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/forgot_bt"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="15dp"
+        android:text="OR"
+        android:textAllCaps="false"
+        android:gravity="center"/>
+
+    <Button
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/face_finger"
+        android:layout_below="@id/or_tv"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="15dp"
+        android:textAllCaps="false"
+        android:text="Fingerprint / Face"/>
+
 
 </RelativeLayout>
